--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
     </head>
     <body>
         <header id="header">
-            <nav>
+            <nav style="background-color: transparent;">
                 <div id="main-nav-div">
                     <div id="logo-text-div">
                         <img id="vg-logo" src="img/VG logo.png" height="40px">
-                        <h1 id="nav-text">Vgeraph<h1>
+                        <a href="#socials" style="text-decoration: none;"><h1
+                                id="nav-text">Vgeraph<h1></a>
                             </div>
-                            <img id="git-logo" src="img/github-logo.png"
-                                alt="github"
-                                title="github">
+                            <a href="https://github.com/Yooopy" target="_blank"
+                                style=" margin-top: auto;margin-bottom: auto; margin-right: 10px;">
+                                <img src="img/github.png"
+                                    id="git-logo"
+                                    style="height: .9cm;">
+                            </a>
                         </div>
                     </nav>
                 </header>
@@ -42,10 +46,12 @@
                         <section>
                             <div id="div-main-text"
                                 style="box-shadow: 0px 2px 20px -5px;">
-                                <h2 style="color: #c5c5c5;" align="center">This
+                                <h2
+                                    style="color: #c5c5c5; font-family: cursive , fantasy , monospace;"
+                                    align="center">This
                                     is Me;</h2>
                                 <hr
-                                    style="border-color: #191919; border-style: groove; width: 300px; margin: auto;">
+                                    style="border-color: #242424; border-style: solid; width: 300px; margin: auto;">
                                 <p style="color: #d6d6d6;">Yup! Im vgeraph and
                                     Yooopy and cuVte and V,<br>
                                     My Close Friends call me "V".<br>
@@ -139,11 +145,110 @@
                                     style="border-radius: 0px;height:30px;padding: 5px;">
                                 <p class="p-label">Lr</p>
                             </div>
+                            <div class="vgeraph-div" style="margin: 5px;">
+                                <img src="img/figma.png"
+                                    class="vg-imgs"
+                                    style="border-radius: 0px;height:30px;padding: 5px;">
+                                <p class="p-label">Figma</p>
+                            </div>
                         </section>
                         <hr
                             style="border-color: rgb(26, 26, 26); border-style: solid;width: 260px;">
                     </article>
+                    <article>
+                        <section>
+                            <div id="div-main-text"
+                                style="box-shadow: 0px 2px 20px -5px;">
+                                <h2
+                                    style="color: #c5c5c5; font-family: cursive , fantasy , monospace;"
+                                    align="center">I Do:</h2>
+                                <hr
+                                    style="border-color: #242424; border-style: solid; width: 300px; margin: auto;">
+                                <p style="color: #d6d6d6;">I Like coding and
+                                    Graphic Design; <br>
+                                    I like both but now im doing more coding and
+                                    learning more <mark
+                                        style="border-radius: 5px; background-color: cyan;">Html</mark>
+                                    and <mark
+                                        style="border-radius: 5px; background-color: cyan;">Css</mark>
+                                    and..;
+                                    When im writing this, im 17 y`o and im
+                                    studying yet.</p>
+                            </div>
+                        </section>
+                    </article>
+                    <article id="socials">
+                        <h3 class="p-label"
+                            style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-weight: bolder;font-size: 25px;margin-top: 20px; color: white; text-align: center; text-shadow: 0px 3px 4px ;">My
+                            Social Media:</h3>
+                        <section style="display: flex;margin-top: 15px;">
+                            <div
+                                onclick="window.open('https://www.instagram.com/vgeraph/')"
+                                class="vgeraph-div"
+                                style="margin: 5px;"><img
+                                    class="social-imgs" src="img/instagram.png">
+                                <p class="p-label">Instagram</p>
+                            </div>
+                            <div
+                                onclick="window.open('https://Discord.com/users/918613928467128392')"
+                                class="vgeraph-div" style="margin: 5px;"><img
+                                    class="social-imgs" src="img/discord.png">
+                                <p class="p-label">Discord</p>
+                            </div>
+                        </section>
+                        <section style="display: flex;">
+                            <div
+                                onclick="window.open('https://twitter.com/_cuVte_')"
+                                class="vgeraph-div" style="margin: 5px"><img
+                                    class="social-imgs" src="img/twitter.png"
+                                    style="height: 25px;margin-top: auto;margin-bottom: auto;margin-left: 3px;">
+                                <p class="p-label">X, Twitter</p>
+                            </div>
+                            <div
+                                onclick="window.open('https://t.me/Jisatsu_now')"
+                                class="vgeraph-div" style="margin: 5px"><img
+                                    class="social-imgs" src="img/telegram.png">
+                                <p class="p-label">Telegram</p>
+                            </div>
+                        </section>
+                        <section style="display: flex;">
+                            <div
+                                onclick="window.open('https://github.com/Yooopy')"
+                                class="vgeraph-div" style="margin: 5px"><img
+                                    class="social-imgs" src="img/github.png">
+                                <p class="p-label">Github</p>
+                            </div>
+                            <div
+                                onclick="window.open('https://open.spotify.com/user/31c7b5mzfvtd6erv2xklwphbn4km')"
+                                class="vgeraph-div" style="margin: 5px"><img
+                                    class="social-imgs" src="img/spotify.png">
+                                <p class="p-label">Spotify</p>
+                            </div>
+                        </section>
+                        <section
+                            onclick="window.open('https://steamcommunity.com/id/vgeraph/')"
+                            style="display: flex;">
+                            <div class="vgeraph-div" style="margin: 5px"><img
+                                    class="social-imgs" src="img/steam.png">
+                                <p class="p-label">Steam</p>
+                            </div>
+                            <div
+                                onclick="window.open('https://www.pinterest.com/vgeraph/')"
+                                class="vgeraph-div" style="margin: 5px"><img
+                                    class="social-imgs" src="img/pinterest.png">
+                                <p class="p-label">Pinterest</p>
+                            </div>
+                        </section>
+
+                    </article>
                 </main>
-                <footer></footer>
+                <footer>
+                    <div>
+                        <hr style="border-style:solid ;width: 300px">
+                        <p style="font-family: monospace;color: #747474;">I Hope
+                            You Love Me
+                            :)&nbsp;|&nbsp;2024</p>
+                    </div>
+                </footer>
             </body>
         </html>
