Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	new file:   img/figma(1).png
	deleted:    img/figma.png
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                 <p class="p-label">Lr</p>
                             </div>
                             <div class="vgeraph-div" style="margin: 5px;">
-                                <img src="img/figma.png"
+                                <img src="img/figma(1).png"
                                     class="vg-imgs"
                                     style="border-radius: 0px;height:30px;padding: 5px;">
                                 <p class="p-label">Figma</p>
