--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Haha</title>
+        <title>Its Me, V</title>
         <link href="style header.css" rel="stylesheet">
         <link href="style main.css" rel="stylesheet">
     </head>
