--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <div id="div-main-text"
                                 style="box-shadow: 0px 2px 20px -5px;">
                                 <h2
-                                    style="color: #c5c5c5; font-family: cursive , fantasy , monospace;"
+                                    style="color: #c5c5c5; font-family: cursive , fantasy , Arial;"
                                     align="center">This
                                     is Me;</h2>
                                 <hr
@@ -160,7 +160,7 @@
                             <div id="div-main-text"
                                 style="box-shadow: 0px 2px 20px -5px;">
                                 <h2
-                                    style="color: #c5c5c5; font-family: cursive , fantasy , monospace;"
+                                    style="color: #c5c5c5; font-family: cursive , fantasy , Arial;"
                                     align="center">I Do:</h2>
                                 <hr
                                     style="border-color: #242424; border-style: solid; width: 300px; margin: auto;">
