--- a/index.html
+++ b/index.html
@@ -203,16 +203,22 @@
                 style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-weight: bolder;font-size: 25px;margin-top: 20px; color: white; text-align: center; text-shadow: 0px 3px 4px ;">
                 My
                 Projects:</h3>
-            <div onclick="window.open('https://yooopy.github.io/V-Shop/')" class="vgeraph-div"
+            <div onclick="window.open('https://yooopy.github.io/Todo/')" class="vgeraph-div"
                 style="background-color: whitesmoke;width: 80%;border-radius: 50px;">
                 <img src="img/github-logo.png" class="vg-imgs" style="height: 40px;">
-                <p style="color: black;" class="p-label">V Shop</p>
+                <p style="color: black;" class="p-label">ToDo App (Temp)</p>
             </div>
             <div onclick="window.open('https://yooopy.github.io/Calculator/')" class="vgeraph-div"
                 style="background-color: whitesmoke;width: 80%;border-radius: 50px;">
                 <img src="img/github-logo.png" class="vg-imgs" style="height: 40px;">
                 <p style="color: black;" class="p-label">Calculator</p>
             </div>
+            <div onclick="window.open('https://yooopy.github.io/V-Shop/')" class="vgeraph-div"
+                style="background-color: whitesmoke;width: 80%;border-radius: 50px;">
+                <img src="img/github-logo.png" class="vg-imgs" style="height: 40px;">
+                <p style="color: black;" class="p-label">V Shop</p>
+            </div>
+
         </article>
     </main>
     <footer>
