--- a/index.html
+++ b/index.html
@@ -174,7 +174,11 @@
                 </div>
                 <div class="projects" onclick="window.open('https://yooopy.github.io/Todo')">
                     <img class="icons" src="assets/Socials/github.png" alt="GitHub">
-                    <p class="labels">3. Todo (Latest)</p>
+                    <p class="labels">3. Todo </p>
+                </div>
+                <div class="projects" onclick="window.open('https://yooopy.github.io/Notes')">
+                    <img class="icons" src="assets/Socials/github.png" alt="GitHub">
+                    <p class="labels">4. Notes (Latest)</p>
                 </div>
             </div>
         </article>
