--- a/index.html
+++ b/index.html
@@ -178,7 +178,15 @@
                 </div>
                 <div class="projects" onclick="window.open('https://yooopy.github.io/Notes')">
                     <img class="icons" src="assets/Socials/github.png" alt="GitHub">
-                    <p class="labels">4. Notes (Latest)</p>
+                    <p class="labels">4. Notes</p>
+                </div>
+                <div class="projects" onclick="window.open('https://yooopy.github.io/Dogs')">
+                    <img class="icons" src="assets/Socials/github.png" alt="GitHub">
+                    <p class="labels">5. Dogs</p>
+                </div>
+                <div class="projects" onclick="window.open('https://yooopy.github.io/Weather')">
+                    <img class="icons" src="assets/Socials/github.png" alt="GitHub">
+                    <p class="labels">6. Weather (Latest)</p>
                 </div>
             </div>
         </article>
