--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
             </section>
         </div>
         <article>
+            <!-- <img id="float-b" src=""> --> <!--Make this a float button Later!!!!!!!!!!!!!!!!-->
 
             <div id="Projects-div">
                 <div>
