--- a/index.html
+++ b/index.html
@@ -187,7 +187,11 @@
                 </div>
                 <div class="projects" onclick="window.open('https://yooopy.github.io/Weather')">
                     <img class="icons" src="assets/Socials/github.png" alt="GitHub">
-                    <p class="labels">6. Weather (Latest)</p>
+                    <p class="labels">6. Weather</p>
+                </div>
+                <div class="projects" onclick="window.open('https://yooopy.github.io/Calculator-v2')">
+                    <img class="icons" src="assets/Socials/github.png" alt="GitHub">
+                    <p class="labels">6. Calculator v2 (Latest)</p>
                 </div>
             </div>
         </article>
