--- a/index.html
+++ b/index.html
@@ -165,34 +165,44 @@
                     <p style="text-align: left;" class="labels">Projects</p>
                     <hr id="hr-p">
                 </div>
-                <div class="projects" onclick="window.open('https://yooopy.github.io/V-Shop')">
+
+                <div class="projects" onclick="window.open('https://yooopy.github.io/react-calc')">
                     <img class="icons" src="assets/Socials/github.png" alt="GitHub">
-                    <p class="labels">1. Shop (Oldest)</p>
-                </div>
-                <div class="projects" onclick="window.open('https://yooopy.github.io/Calculator')">
-                    <img class="icons" src="assets/Socials/github.png" alt="GitHub">
-                    <p class="labels">2. Calculator</p>
-                </div>
-                <div class="projects" onclick="window.open('https://yooopy.github.io/Todo')">
-                    <img class="icons" src="assets/Socials/github.png" alt="GitHub">
-                    <p class="labels">3. Todo </p>
-                </div>
-                <div class="projects" onclick="window.open('https://yooopy.github.io/Notes')">
-                    <img class="icons" src="assets/Socials/github.png" alt="GitHub">
-                    <p class="labels">4. Notes</p>
-                </div>
-                <div class="projects" onclick="window.open('https://yooopy.github.io/Dogs')">
-                    <img class="icons" src="assets/Socials/github.png" alt="GitHub">
-                    <p class="labels">5. Dogs</p>
-                </div>
-                <div class="projects" onclick="window.open('https://yooopy.github.io/Weather')">
-                    <img class="icons" src="assets/Socials/github.png" alt="GitHub">
-                    <p class="labels">6. Weather</p>
+                    <p class="labels">8. Calculator (React) Latest</p>
                 </div>
                 <div class="projects" onclick="window.open('https://yooopy.github.io/Calculator-v2')">
                     <img class="icons" src="assets/Socials/github.png" alt="GitHub">
                     <p class="labels">7. Calculator v2 (Latest)</p>
                 </div>
+                <div class="projects" onclick="window.open('https://yooopy.github.io/Weather')">
+                    <img class="icons" src="assets/Socials/github.png" alt="GitHub">
+                    <p class="labels">6. Weather</p>
+                </div>
+                <div class="projects" onclick="window.open('https://yooopy.github.io/Dogs')">
+                    <img class="icons" src="assets/Socials/github.png" alt="GitHub">
+                    <p class="labels">5. Dogs</p>
+                </div>
+                <div class="projects" onclick="window.open('https://yooopy.github.io/Notes')">
+                    <img class="icons" src="assets/Socials/github.png" alt="GitHub">
+                    <p class="labels">4. Notes</p>
+                </div>
+                <div class="projects" onclick="window.open('https://yooopy.github.io/Todo')">
+                    <img class="icons" src="assets/Socials/github.png" alt="GitHub">
+                    <p class="labels">3. Todo </p>
+                </div>
+                <div class="projects" onclick="window.open('https://yooopy.github.io/Calculator')">
+                    <img class="icons" src="assets/Socials/github.png" alt="GitHub">
+                    <p class="labels">2. Calculator</p>
+                </div>
+                <div class="projects" onclick="window.open('https://yooopy.github.io/V-Shop')">
+                    <img class="icons" src="assets/Socials/github.png" alt="GitHub">
+                    <p class="labels">1. Shop (Oldest)</p>
+                </div>
+
+
+
+
+
             </div>
         </article>
     </main>
