--- a/index.html
+++ b/index.html
@@ -166,6 +166,10 @@
                     <hr id="hr-p">
                 </div>
 
+                <div class="projects" onclick="window.open('https://yooopy.github.io/CLayout')">
+                    <img class="icons" src="assets/Socials/github.png" alt="GitHub">
+                    <p class="labels">9. Customized Layout (React) Latest</p>
+                </div>
                 <div class="projects" onclick="window.open('https://yooopy.github.io/react-calc')">
                     <img class="icons" src="assets/Socials/github.png" alt="GitHub">
                     <p class="labels">8. Calculator (React) Latest</p>
