--- a/index.html
+++ b/index.html
@@ -168,11 +168,15 @@
 
                 <div class="projects" onclick="window.open('https://yooopy.github.io/CLayout')">
                     <img class="icons" src="assets/Socials/github.png" alt="GitHub">
-                    <p class="labels">9. Customized Layout (React) Latest</p>
+                    <p class="labels">10. Customized Layout (React) Latest</p>
                 </div>
-                <div class="projects" onclick="window.open('https://yooopy.github.io/react-calc')">
+<div class="projects" onclick="window.open('https://yooopy.github.io/react-calc')">
                     <img class="icons" src="assets/Socials/github.png" alt="GitHub">
-                    <p class="labels">8. Calculator (React) Latest</p>
+                    <p class="labels">9. Notes remake(React) </p>
+                </div>
+                <div class="projects" onclick="window.open('https://yooopy.github.io/Notes2')">
+                    <img class="icons" src="assets/Socials/github.png" alt="GitHub">
+                    <p class="labels">8. Calculator (React)</p>
                 </div>
                 <div class="projects" onclick="window.open('https://yooopy.github.io/Calculator-v2')">
                     <img class="icons" src="assets/Socials/github.png" alt="GitHub">
